# fortnite-replay-parser

./: .gitignore  LICENSE  Pipfile  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
fortnite_replay_parser/: exceptions.py  logger.py
fortnite_replay_parser/events/: match.py  parser.py  player.py
fortnite_replay_parser/models/: fortnite.py
fortnite_replay_parser/models/enums/: fortnite.py
src/: exceptions.py  logger.py  models.py  reader.py  utils.py
src/events/: match.py  parser.py
src/models/: events.py  fortnite.py  reader.py
src/models/enums/: fortnite.py  unreal.py
tests/: test_reader.py
